8282592: C2: assert(false) failed: graph should be schedulable

Reviewed-by: chagedorn, thartmann